--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="css/slick.css">
 		<link rel="stylesheet" href="css/styles.css" type="text/css"/> 
 		<link rel="stylesheet" href="fonts/fonts.css">
-		<title>MyContainer</title>
+		<title>MyCointainer</title>
 	</head>
 	<body class="home_page">
 		<header>
@@ -39,7 +39,8 @@
 				<div class="wrap">
 					<h1>Join our <br>expert team</h1>
 					<p>We are looking for a great people to build amazing stuff!</p>
-					<a class="apply_position_triger" href="#">Apply now</a>
+					<a href="https://docs.google.com/forms/d/e/1FAIpQLSeYf1Sh9Tk2Pr80K1FtMoSDvtvP90Q9DPGOkoKcvanstxFyEQ/viewform?usp=sf_link">Apply now</a>
+					<!--<a class="apply_position_triger" href="#">Apply now</a>-->
 					<div class="bg_image_container">
 						<img class="main_bg_right_top" src="img/main_bg_right_top.png" alt="gear">
 						<img class="main_bg_right_bottom" src="img/main_bg_right_bottom.png" alt="gear">
@@ -138,9 +139,19 @@
 						<h3>Middle/Senior DevOps Engineer</h3>
 						<a href="ppc_manager_devops.html" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
 					</div>
+					<div>
+						<p class="category">Node.js</p>
+						<h3>Senior Back-End Developer (Node.js)</h3>
+						<a href="ppc_manager_back_end.html" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
+					</div>
+					<div>
+						<p class="category">Other</p>
+						<h3>Senior React Native Developer</h3>
+						<a href="ppc_manager_react.html" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
+					</div>
 				</div>
 				<div class="slider-progress">
-					<input id="SliderRange" min="1" max="3" value="1" type="range" step="1">
+					<input id="SliderRange" min="1" max="5" value="1" type="range" step="1">
 				</div>
 			</div>
 		</section>
@@ -194,6 +205,7 @@
 							<a data-map-title="Indonesia" class="map_mark indonesia">1</a>
 							<a data-map-title="Ukraine" class="map_mark ukraine">20</a>
 							<a data-map-title="Poland" class="map_mark poland">18</a>
+							<a data-map-title="Canada" class="map_mark canada">1</a>
 						</div>
 					</div>
 				</div>
