--- a/ppc_manager_react.html
+++ b/ppc_manager_react.html
@@ -48,40 +48,46 @@
 		<section class="main_ppc_content white_bg">
 			<div class="wrap">
                 <div id="FrontEndDeveloper vacancy_content">
-					<h2>Senior Front-end Developer (JavaScript)</h2>
-					<p><b>We’re looking for a Senior Front-end Developer to join our rapidly growing company. This role is a unique opportunity to work in a very friendly and ambitious environment with a lot of freedom & decision-making power.</b></p>
-					<p><b>MyCointainer</b> has been in business since late 2018. In November 2021 we raised our first financing round and are now backed by strong global VCs. As of today, MyCointainer serves over 120 000 customers globally. Our mission is to enable easy access to various crypto earning protocols for all. We want everyone to benefit from a changing financial landscape and speed up the global advent of crypto adoption. We pride ourselves on very rapid delivery, on which we have a clear-cut focus.</p>
+					<h2>Senior React Native Developer</h2>
+					<p><b>MyCointainer has been in business since late 2018. In November 2021 we raised our first financing round and are now backed by strong global VCs. As of today, MyCointainer serves over 120 000 customers globally. Our mission is to enable easy access to various crypto earning protocols for all.</b></p>
+					<p>We want everyone to benefit from a changing financial landscape and
+                        speed up the global advent of crypto adoption. We pride ourselves on very rapid delivery, on which we have a clear-cut focus.</p>
 					<p>Moving forward with this idea, we need great people to build amazing stuff!</p>
-					<h3>Requirements:</h3>
-					<ul>
-						<li>Experience in creating commercial products from 4 years</li>
-						<li>JavaScript 4 yeas+</li>
-						<li>Experience in using MongoDB</li>
-						<li>Experience with Docker, Kubernetes</li>
-						<li>Ability to work with microservice architecture</li>
-						<li>Intermediate English</li>
-						<li>Experience with Blockchain or high load products will be a plus</li>
-					</ul>
 					<h3>Your responsibilities and focus:</h3>
 					<ul>
-						<li>Working mainly on the front-end side of micro-services architecture</li>
-						<li>Working with Docker / Kubernetes</li>
-						<li>Cover your development with Unit tests</li>
-						<li>Working with various APIs and integrations</li>
-						<li>Owning a given micro-service(s), working with the Product Owner and team to propose new ideas and improvements</li>
-						<li>Working with Lead Architect / CTO to ensure a given micro-service is operating properly in the ecosystem of our products</li>
-						<li>Working on non-crypto related front-end services in both B2C and B2B</li>
-						<li>Working on more crypto-related front-end services</li>
+						<li>Constant development of the mobile app “MyCointainer” and its features</li>
+						<li>Collaboration with other team members and with cross-functional teams</li>
+						<li>Participation in estimation and planning sessions</li>
+					</ul>
+					<h3>Requirements:</h3>
+					<ul>
+						<li>5+ years in mobile development</li>
+						<li>2+ years using React Native</li>
+						<li>Full cycle mobile development both for iOS and Android</li>
+						<li>Production deployed React Native projects</li>
+						<li>Git</li>
+						<li>REST, GraphQL</li>
+						<li>TypeScript, JavaScript, NodeJS, React</li>
+                        <li>MongoDB</li>
+                        <li>Google Play / App store working and resolving issues experience</li>
+                        <li>Good UI experience</li>
+                        <li>Commercial experience at least in one of the sectors: fin-tech/retail/B2C</li>
+                        <li>Upper-intermediate English and good communication skills is a must</li>
 					</ul>
 					<h3>Benefits:</h3>
 					<ul>
-						<li>Competitive salary</li>
+						<li>Competitive salary with reviews and a clear promotion system</li>
 						<li>Fully remote</li>
 						<li>Flexible schedule</li>
 						<li>Unlimited vacation and sick leave</li>
-						<li>We generally work in very small teams of 2-3 Senior-level developers. Also, we limit stakeholders to max 1-2 decisions makers to run projects fast without any bureaucracy</li>
-						<li>Opportunity to become a Team Leader and grow with a team of high-level specialists</li>
+						<li>English lessons</li>
+						<li>An amazing team of mostly Senior+ specialists that you can learn from</li>
+                        <li>Friendly environment with lots of freedom and decision-making opportunities</li>
+                        <li>We generally work in very small teams of 2-3 Senior-level developers. Also, we limit stakeholders to a max of 1-2 decisions makers to run projects fast without any bureaucracy.</li>
 					</ul>
+					<p>Our team is made up of thinkers, innovators, and go-getters working on cutting-edge projects.
+                        We value passionate and down-to-earth people who are driven to get things done and find creative solutions to problems. We prioritize quality and delivery. We limit meetings to a bare minimum.
+                        We like people with a proactive attitude who take responsibility for their tasks, respect their job, and wish to become a part of something great.</p>
 				</div>
 			</div>
 		</section>
