--- a/team.html
+++ b/team.html
@@ -195,7 +195,8 @@
 				<div class="join_us_content">
 					<h2>Didn’t find the job you want?</h2>
 					<p>We are always open for exceptional people to join our team, so if you didn't find a suitable position apply here.</p>
-					<button>Join us</button>
+					<a href="https://docs.google.com/forms/d/e/1FAIpQLSdCkoN5DwsX_yIW1shd-GzJVkAtc31lxuKbzemVIXGEf-rYCA/viewform?usp=sf_link"><button>Join us</button></a>
+					<!--<button>Join us</button>-->
 				</div>
 				<div class="join_us_bg_container">
 					<img src="img/question.svg" alt="???">
