--- a/vacancies.html
+++ b/vacancies.html
@@ -56,6 +56,8 @@
 					<li class="technology">QA Automation</li>
 					<li class="customer_care">JavaScript</li>
 					<li class="devops">DevOps</li>
+					<li class="node_js">Node.js</li>
+					<li class="other">Other</li>
 				</ul>
 				<div class="flex_container">
 					<div>
@@ -73,6 +75,16 @@
 						<h3>Middle/Senior DevOps Engineer</h3>
 						<a href="ppc_manager_devops.html" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
 					</div>
+					<div>
+						<p class="category">Node.js</p>
+						<h3>Senior Back-End Developer (Node.js)</h3>
+						<a href="ppc_manager_back_end.html" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
+					</div>
+					<div>
+						<p class="category">Other</p>
+						<h3>Senior React Native Developer</h3>
+						<a href="ppc_manager_react.html" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -81,7 +93,8 @@
 				<div class="join_us_content">
 					<h2>Didn’t find the job you want?</h2>
 					<p>We are always open for exceptional people to join our team, so if you didn't find a suitable position apply here.</p>
-					<button>Join us</button>
+					<a href="https://docs.google.com/forms/d/e/1FAIpQLSdCkoN5DwsX_yIW1shd-GzJVkAtc31lxuKbzemVIXGEf-rYCA/viewform?usp=sf_link"><button>Join us</button></a>
+					<!--<button>Join us</button>-->
 				</div>
 				<div class="join_us_bg_container">
 					<img src="img/question.svg" alt="???">
