--- a/ppc_manager_devops.html
+++ b/ppc_manager_devops.html
@@ -40,7 +40,8 @@
 					<a href="#" class="back_btn" onclick="history.back();return false;"><img src="img/arrow-left.svg" alt="<">Back</a>
 					<h1>PPC manager</h1>
 					<p>We are currently looking for a PPC Specialist who will be involved in developing promotion strategy for the project.</p>
-					<a class="apply_position_triger" href="#">Apply to this position</a>
+					<a href="https://docs.google.com/forms/d/e/1FAIpQLSeYf1Sh9Tk2Pr80K1FtMoSDvtvP90Q9DPGOkoKcvanstxFyEQ/viewform?usp=sf_link">Apply now</a>
+					<!--<a class="apply_position_triger" href="#">Apply now</a>-->
 				</div>
 			</div>
 		</header>
@@ -91,24 +92,34 @@
 			<div class="wrap">
 				<h2>More opened positions for your career</h2>
 				<div class="slider">
-					<div class="slide">
+					<div>
 						<p class="category">QA Automation</p>
 						<h3>Middle/Senior AQA Engineer</h3>
 						<a href="ppc_manager_aqa_engineer.html" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
 					</div>
-					<div class="slide">
+					<div>
 						<p class="category">JavaScript</p>
 						<h3>Senior Front-end Developer (JavaScript)</h3>
 						<a href="ppc_manager_front_end.html" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
 					</div>
-					<div class="slide">
+					<div>
 						<p class="category">DevOps</p>
 						<h3>Middle/Senior DevOps Engineer</h3>
 						<a href="ppc_manager_devops.html" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
 					</div>
+					<div>
+						<p class="category">Node.js</p>
+						<h3>Senior Back-End Developer (Node.js)</h3>
+						<a href="ppc_manager_back_end.html" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
+					</div>
+					<div>
+						<p class="category">Other</p>
+						<h3>Senior React Native Developer</h3>
+						<a href="ppc_manager_react.html" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
+					</div>
 				</div>
 				<div class="slider-progress">
-					<input id="SliderRange" min="1" max="3" value="1" type="range" step="1">
+					<input id="SliderRange" min="1" max="5" value="1" type="range" step="1">
 				</div>
 			</div>
 		</section>
@@ -117,7 +128,8 @@
 				<div class="join_us_content">
 					<h2>Didn’t find the job you want?</h2>
 					<p>We are always open for exceptional people to join our team, so if you didn't find a suitable position apply here.</p>
-					<button>Join us</button>
+					<a href="https://docs.google.com/forms/d/e/1FAIpQLSdCkoN5DwsX_yIW1shd-GzJVkAtc31lxuKbzemVIXGEf-rYCA/viewform?usp=sf_link"><button>Join us</button></a>
+					<!--<button>Join us</button>-->
 				</div>
 				<div class="join_us_bg_container">
 					<img src="img/question.svg" alt="???">
